--- a/HamsterWarsV2.Blazor/Pages/Leaderboard.razor
+++ b/HamsterWarsV2.Blazor/Pages/Leaderboard.razor
@@ -1,6 +1,6 @@
 ﻿@page "/Leaderboard"
 
-@inject HttpClient HttpClient
+@inject IRequestService RequestService
 
 <h1>Leaderboard</h1>
 
@@ -40,7 +40,7 @@ else
 
     protected override async Task OnInitializedAsync()
     {
-        hamsters = await HttpClient.GetFromJsonAsync<List<Hamster>>("/api/hamsters");
+        hamsters = await RequestService.GetHamsters();
 
         var descendingOrder = hamsters.OrderByDescending(i => PercentageCalculator.Calculate(i.Wins, i.Games));
         hamsters = descendingOrder.ToList();
