--- a/HamsterWarsV2.Blazor/Pages/Statistics.razor
+++ b/HamsterWarsV2.Blazor/Pages/Statistics.razor
@@ -1,6 +1,6 @@
 ﻿@page "/Statistics"
 
-@inject HttpClient HttpClient
+@inject IRequestService RequestService
 
 <h3>Statistics</h3>
 
@@ -62,10 +62,10 @@ else
 
     protected override async Task OnInitializedAsync()
     {
-        hamsters = await HttpClient.GetFromJsonAsync<List<Hamster>>("/api/hamsters");
+        hamsters = await RequestService.GetHamsters();
 
-        hamsterWinners = await HttpClient.GetFromJsonAsync<List<Hamster>>("/api/hamsters/winners");
-        hamsterLosers = await HttpClient.GetFromJsonAsync<List<Hamster>>("/api/hamsters/losers");
+        hamsterWinners = await RequestService.GetWinnerHamsters();
+        hamsterLosers = await RequestService.GetLoserHamsters();
     }
 
 }
