--- a/HamsterWarsV2.Blazor/Pages/History.razor
+++ b/HamsterWarsV2.Blazor/Pages/History.razor
@@ -47,6 +47,7 @@ else
         hamsters = await RequestService.GetHamsters();
 
         battles = await RequestService.GetBattles();
+        battles = ListOrderService.OrderBattleByDate(battles);
 
         StateHasChanged();
     }
